We can now draw a bunch of very red blocks onto the screen.  It's almost too much to look at.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,24 @@
-all:
-	gcc -Wall `sdl-config --cflags` -o skf skf.c `sdl-config --libs`
+# $Id: Makefile,v 1.2 2005/05/06 02:38:06 chris Exp $
+
+CC = gcc
+CFLAGS = -O2 -Wall `sdl-config --cflags`
+LDFLAGS = `sdl-config --libs`
+
+OBJS = draw.o skf.o
+
+all: skf
+
+skf: $(OBJS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 clean:
-	-rm core skf
+	-rm core skf *.o
+
+#####################################################################
+# Dependancies                                                      #
+#####################################################################
+draw.o: draw.c \
+	draw.h skf.h
+
+skf.o: skf.c \
+	skf.h
