--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.3 2005/05/06 04:06:17 chris Exp $
+# $Id: Makefile,v 1.4 2005/05/08 00:26:43 chris Exp $
 
 CC = gcc
 CFLAGS = -O2 -Wall `sdl-config --cflags`
@@ -18,7 +18,7 @@ clean:
 # Dependancies                                                      #
 #####################################################################
 draw.o: draw.c \
-	draw.h skf.h
+	colors.h draw.h skf.h
 
 skf.o: skf.c \
-	skf.h
+	colors.h skf.h
