Shrink the playing field's X dimension to an even number so blocks can start in the true middle.  Draw a black box on the inside of each block for decoration (this is probably all temporary, but our demo will at least look a little better).  Randomize block colors to make things more interesting.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
-# $Id: Makefile,v 1.4 2005/05/08 00:26:43 chris Exp $
+# $Id: Makefile,v 1.5 2005/05/08 01:07:34 chris Exp $
 
 CC = gcc
 CFLAGS = -O2 -Wall `sdl-config --cflags`
 LDFLAGS = `sdl-config --libs`
 
-OBJS = draw.o skf.o
+OBJS = colors.o draw.o skf.o
 
 all: skf
 
@@ -17,6 +17,9 @@ clean:
 #####################################################################
 # Dependancies                                                      #
 #####################################################################
+colors.o: colors.c \
+	colors.h
+
 draw.o: draw.c \
 	colors.h draw.h skf.h
 
