--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
-# $Id: Makefile,v 1.5 2005/05/08 01:07:34 chris Exp $
+# $Id: Makefile,v 1.6 2005/05/10 03:42:17 chris Exp $
 
 CC = gcc
 CFLAGS = -O2 -Wall `sdl-config --cflags`
 LDFLAGS = `sdl-config --libs`
 
-OBJS = colors.o draw.o skf.o
+OBJS = 4block.o colors.o draw.o sblock.o skf.o
 
 all: skf
 
@@ -17,11 +17,17 @@ clean:
 #####################################################################
 # Dependancies                                                      #
 #####################################################################
+4block.o: 4block.c \
+	blocks.h colors.h draw.h skf.h
+
 colors.o: colors.c \
 	colors.h
 
 draw.o: draw.c \
 	colors.h draw.h skf.h
 
+sblock.o: sblock.c \
+	blocks.h colors.h draw.h skf.h
+
 skf.o: skf.c \
-	colors.h skf.h
+	blocks.h colors.h skf.h
