--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
-# $Id: Makefile,v 1.7 2005/05/13 18:04:54 chris Exp $
+# $Id: Makefile,v 1.8 2005/05/26 15:16:21 chris Exp $
 
 CC = gcc
 CFLAGS = -O2 -Wall `sdl-config --cflags`
 LDFLAGS = `sdl-config --libs`
 
-OBJS = 4block.o colors.o draw.o sblock.o skf.o
+OBJS = 4block.o clock.o colors.o draw.o sblock.o skf.o
 
 all: skf
 
@@ -20,6 +20,9 @@ clean:
 4block.o: 4block.c \
 	blocks.h colors.h draw.h skf.h
 
+clock.o: clock.c \
+	colors.h draw.h skf.h
+
 colors.o: colors.c \
 	colors.h skf.h
 
@@ -30,4 +33,4 @@ sblock.o: sblock.c \
 	blocks.h colors.h draw.h skf.h
 
 skf.o: skf.c \
-	blocks.h colors.h skf.h
+	blocks.h clock.h colors.h skf.h
