--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,11 @@
-# $Id: Makefile,v 1.10 2005/06/01 01:15:38 chris Exp $
+# $Id: Makefile,v 1.11 2005/06/06 03:44:35 chris Exp $
 
 CC = gcc
 CFLAGS = -O2 -Wall `sdl-config --cflags`
 LDFLAGS = `sdl-config --libs`
 
-OBJS = 4block.o clock.o colors.o draw.o lblock.o plusblock.o sblock.o skf.o
+OBJS = 4block.o clock.o colors.o draw.o lblock.o plusblock.o sblock.o skf.o \
+		 ublock.o
 
 all: skf
 
@@ -40,3 +41,6 @@ sblock.o: sblock.c \
 
 skf.o: skf.c \
 	blocks.h clock.h colors.h skf.h
+
+ublock.o: ublock.c \
+	blocks.h colors.h draw.h skf.h
