--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,23 @@
-# $Id: Makefile,v 1.11 2005/06/06 03:44:35 chris Exp $
+# $Id: Makefile,v 1.12 2005/06/08 03:01:12 chris Exp $
+
+include ../Includes.mk
 
 CC = gcc
 CFLAGS = -O2 -Wall `sdl-config --cflags`
-LDFLAGS = `sdl-config --libs`
+LDFLAGS = `sdl-config --libs` -lSDL_image
 
 OBJS = 4block.o clock.o colors.o draw.o lblock.o plusblock.o sblock.o skf.o \
 		 ublock.o
 
 all: skf
 
+skf: CFLAGS += -DSKF_IMAGE_DIR=\"$(IMGDIR)\"
 skf: $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+test: CFLAGS += -DSKF_IMAGE_DIR=\"../graphics\"
+test: $(OBJS)
+	$(CC) $(CFLAGS) -o skf $^ $(LDFLAGS)
 
 clean:
 	-rm core* skf *.o
